--- a/logstash/logstash_kafka.conf
+++ b/logstash/logstash_kafka.conf
@@ -17,7 +17,7 @@ filter
 }
 output {
     elasticsearch {
-        index  => "app1-logs-%{+YYYY.MM.dd}"
+        index  => "from-host-%{+YYYY.MM.dd}"
         hosts => ["elasticsearch:9200"]
         sniffing => false
     }
